2008-04-16  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CTextEditorExtension.cs: Track API change.

2008-04-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Parser/TagDatabaseManager.cs: Fixed bug that prevented system tags from
	  being written and parsed.

2008-04-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs, gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/gui.stetic: Made details button unsensitive until a package is
	  selected.

2008-04-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs, CBinding.addin.xml,
	  ProjectPad/ProjectPackageNodeBuilder.cs, Project/CProject.cs: Added a
	  command to the Package context menu to see the details on the package
	  and fixed a bug where packages could not be added to a project.

2008-04-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* CBinding.addin.xml: Commented out a wrong extension point. Will find the
	  correct one later.

2008-04-12  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/PackageDetails.cs, Gui/EditPackagesDialog.cs, CBinding.addin.xml,
	  ProjectPad/ProjectPackagesFolderNodeBuilder.cs,
	  ProjectPad/ProjectPackageNodeBuilder.cs, CBinding.mdp,
	  Project/Package.cs, Project/ProjectPackageCollection.cs,
	  Project/ProjectPackageEventArgs.cs, Project/ProjectPackage.cs,
	  Project/CProject.cs, gtk-gui/CBinding.PackageDetails.cs,
	  gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/CBinding.CodeGenerationPanel.cs, gtk-gui/gui.stetic,
	  Makefile.am, Compiler/CCompiler.cs: Changed the class ProjectPackage to
	  just Package and created a package details dialog that can be seen from
	  the EditPackagesDialog.

2008-04-12  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs, gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/gui.stetic: Fixed bug 369688 - Find as you type doesn't work in
	  the dialog where you select the project references.
