@@ -1,3 +1,8 @@
+2008-05-08  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* CBinding.addin.xml: Set "isText" attribute on the mimetype
+	  definitions.
+
 2008-04-16  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* Gui/CTextEditorExtension.cs: Track API change.
